# TextEditorCPP

./: CMakeLists.txt  main.cpp
